@@ -8,6 +8,7 @@ import java.util.List;
 public class DonnantDonnantStrategie implements Strategie {
     @Override
     public Decision faireChoix(List<Decision> coupsAdversaire) {
-        return coupsAdversaire.getLast();
+//        return coupsAdversaire.getLast();  Get last pas reconnu
+        return coupsAdversaire.get(coupsAdversaire.size() - 1);
     }
 }
